--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <h2>Welcome to my website</h2>
-    <button>Click Me!</button>
-    <button>Click Me!</button>
+    <h1>Javascript Basics</h1>
     <script src="./app.js"></script>
 </body>
 
