--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -11,12 +11,12 @@
     <h1>Javascript Basics</h1>
     <h1 id="title">Hello</h1>
     <h2>List of students</h2>
-    <ul>
-        <li>Student 1</li>
+    <ul id="result">
+        <li class="special">Student 1</li>
         <li>Student 2</li>
-        <li>Student 3</li>
+        <li class="special">Student 3</li>
         <li>Student 4</li>
-        <li>Student 5</li>
+        <li class="special last">Student 5</li>
     </ul>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
