--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -5,19 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Basics</title>
+    <style>
+        .colors {
+            color: white;
+            background-color: red;
+        }
+
+        .text {
+            font-size: 30px;
+            font-weight: bold;
+            letter-spacing: 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Javascript Basics</h1>
-    <h1 id="title">Hello</h1>
-    <h2>List of students</h2>
-    <ul id="result">
-        <li class="special">Student 1</li>
-        <li>Student 2</li>
-        <li class="special">Student 3</li>
-        <li>Student 4</li>
-        <li class="special last">Student 5</li>
-    </ul>
+    <h1 id="first">I'm First Element</h1>
+    <h1 id="second">I'm Second Element</h1>
+    <h1 id="third">I'm Third Element</h1>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
