--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -11,6 +11,11 @@
             background-color: red;
         }
 
+        .colors2 {
+            color: white;
+            background-color: black;
+        }
+
         .text {
             font-size: 30px;
             font-weight: bold;
@@ -20,9 +25,10 @@
 </head>
 
 <body>
-    <h1 id="first">I'm First Element</h1>
+    <h1 id="first" class="colors">I'm First Element</h1>
     <h1 id="second">I'm Second Element</h1>
     <h1 id="third">I'm Third Element</h1>
+    <h1 id="forth">I'm Fourth Element</h1>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
