--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -5,30 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Basics</title>
-    <style>
-        .colors {
-            color: white;
-            background-color: red;
-        }
-
-        .colors2 {
-            color: white;
-            background-color: black;
-        }
-
-        .text {
-            font-size: 30px;
-            font-weight: bold;
-            letter-spacing: 1rem;
-        }
-    </style>
 </head>
 
 <body>
-    <h1 id="first" class="colors">I'm First Element</h1>
-    <h1 id="second">I'm Second Element</h1>
-    <h1 id="third">I'm Third Element</h1>
-    <h1 id="forth">I'm Fourth Element</h1>
+    <h2>first heading</h2>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
