--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <h2>first heading</h2>
+    <h1 id="header">hello world</h1>
+    <div id="result">
+        <h1>second heading</h1>
+    </div>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
