--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -5,13 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Basics</title>
+    <style>
+        .btn {
+            background-color: #f15025;
+            color: white;
+            font-size: 1.2rem;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .red {
+            background-color: red;
+            color: white;
+            text-transform: uppercase;
+            font-size: 2rem;
+        }
+
+        .blue {
+            background-color: blue;
+            color: white;
+            text-transform: capitalize;
+            font-size: 10px;
+        }
+    </style>
 </head>
 
 <body>
     <h1 id="header">hello world</h1>
-    <div id="result">
-        <h1>second heading</h1>
-    </div>
+    <p>I can trigger an event!</p>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
