--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -33,8 +33,7 @@
 </head>
 
 <body>
-    <h1 id="header">hello world</h1>
-    <p>I can trigger an event!</p>
+    <input type="text" id="name">
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
