--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -15,25 +15,17 @@
             border-radius: 5px;
             cursor: pointer;
         }
-
-        .red {
-            background-color: red;
-            color: white;
-            text-transform: uppercase;
-            font-size: 2rem;
-        }
-
-        .blue {
-            background-color: blue;
-            color: white;
-            text-transform: capitalize;
-            font-size: 10px;
-        }
     </style>
 </head>
 
 <body>
-    <input type="text" id="name">
+    <div class="container">
+        <ul class="list-items">
+            <li class="item"><a href="#" class="link">link</a></li>
+            <li class="item"><a href="#" class="link">link</a></li>
+            <li class="item"><a href="#" class="link">link</a></li>
+        </ul>
+    </div>
     <button class="btn" id="btn">Click Me</button>
     <script src="./app.js"></script>
 </body>
