--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -15,18 +15,23 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
+        input {
+            font-size: 1.2rem;
+            padding: 10px;
+            width: 250px;
+            border: 2px solid #ccc;
+            border-radius: 5px;
+        }
     </style>
 </head>
 
 <body>
-    <div class="container">
-        <ul class="list-items">
-            <li class="item"><a href="#" class="link">link</a></li>
-            <li class="item"><a href="#" class="link">link</a></li>
-            <li class="item"><a href="#" class="link">link</a></li>
-        </ul>
-    </div>
-    <button class="btn" id="btn">Click Me</button>
+    <form action="" id="form">
+        <input type="text" id="name" placeholder="Enter Name" /><br /><br />
+        <input type="password" id="password" placeholder="Enter Password" /><br /><br />
+        <input type="submit" value="Submit" class="btn" />
+    </form>
     <script src="./app.js"></script>
 </body>
 
