--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -29,8 +29,7 @@
 <body>
     <form action="" id="form">
         <input type="text" id="name" placeholder="Enter Name" /><br /><br />
-        <input type="password" id="password" placeholder="Enter Password" /><br /><br />
-        <input type="submit" value="Submit" class="btn" />
+        <input type="submit" value="Submit" class="btn" /><br /><br />
     </form>
     <script src="./app.js"></script>
 </body>
