--- a/app_js/sample_1/index.html
+++ b/app_js/sample_1/index.html
@@ -16,21 +16,18 @@
             cursor: pointer;
         }
 
-        input {
-            font-size: 1.2rem;
-            padding: 10px;
-            width: 250px;
-            border: 2px solid #ccc;
+        .box {
+            width: 200px;
+            height: 200px;
+            background-color: gray;
             border-radius: 5px;
         }
     </style>
 </head>
 
 <body>
-    <form action="" id="form">
-        <input type="text" id="name" placeholder="Enter Name" /><br /><br />
-        <input type="submit" value="Submit" class="btn" /><br /><br />
-    </form>
+    <div class="box"></div><br /><br />
+    <input type="button" value="Get Dimensions" class="btn" /><br /><br />
     <script src="./app.js"></script>
 </body>
 
